--- a/src/style.css
+++ b/src/style.css
@@ -27,17 +27,21 @@ a{
     .cont{
         flex-direction: row !important  ;
         justify-content: center;
+        flex-wrap: wrap;
         justify-content: space-evenly;
+    }
+    .hod{
+        padding: 60px !important;
     }
 }
 
 @font-face{
     font-family: Variety;
-    src: url(/fonts/Variety-vjZ4.ttf);
+    src: url(/Variety-vjZ4.ttf);
 }
 @font-face {
     font-family: Misdemeanor;
-    src: url(/fonts/Misdemeanor-Oyx8.ttf);
+    src: url(/Misdemeanor-Oyx8.ttf);
 }
 body{
     background-color: #111;
@@ -187,7 +191,7 @@ svg {
     margin: 20px;
 }
 
-.jj,.damxfd{
+.damxfd{
     font-family: Variety,sans-serif;
     color: rgb(224, 219, 219);
     text-align: center;
@@ -195,6 +199,15 @@ svg {
     padding-bottom: 10px;
     margin-bottom: 10px;
     margin-top: 40px;
+}
+.jj1{
+    font-family: Variety,sans-serif;
+    color: rgb(224, 219, 219);
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    margin-top: 40px; 
 }
 .damxfd{
     color: rgb(224, 219, 219);
@@ -229,15 +242,22 @@ svg {
 
 .cont{
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    align-items: center;
 }
 
 .jeff{
     width: 200px;
+    margin-bottom: 25px;
 }
-.ndu{
+.ndu,.ndu1{
     width: 215px;
+    margin-bottom: 5px;
+}
+.ndu1{
+    width: 160px !important;
+    margin-top: 55px;
+    border-radius: 50%;
 }
 .letter{
     font-size: 25px;
@@ -273,10 +293,7 @@ h1.jo1{
     /* box-shadow: rgba(0, 0, 0, 0.2) 2px 4px 0px 0px; */
 }
 
-/* .jo1:hover{
-    transform: scale(1.3,1.3);
-    transition: 0.4s;
-} */
+
 
 .rgt{
     color: rgb(224, 219, 219);
@@ -285,6 +302,7 @@ h1.jo1{
     text-align: center;
 }
 .hod{
+    padding: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
